[tool.poetry]
name = "pythooooon"
version = "0.1.0"
description = ""
authors = ["Imagawa Yakata"]

[tool.poetry.dependencies]
python = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
